--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banco BBVA</title>
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </head>
   <body>
     <home-page></home-page>
